--- a/LearnConcurrency/LearnConcurrency.vcxproj.filters
+++ b/LearnConcurrency/LearnConcurrency.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="源.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Server.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ThreadPool.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Server.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
